--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_core: ^1.13.1
   firebase_auth: ^3.3.9
   cloud_firestore: ^3.1.10
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
