--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,16 +12,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  firebase_core: ^1.13.1
-  firebase_auth: ^3.3.9
-  cloud_firestore: ^3.1.10
+  firebase_core: ^1.21.1
+  firebase_auth: ^3.7.0
+  cloud_firestore: ^3.4.6
+  firebase_database: ^9.1.3
+  sizer: ^2.0.15
+  shared_preferences: ^2.0.15
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 flutter:
 
